Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8624

QFileDialog breaks horribly on mac

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.0
    • 4.7.0
    • None
    • None
    • macOS
    • 577229a5cb2fe0a9e0806238808ed3c9aeb3d3cc

      Try this example. Both the native and the non-native dialog shows up at the same time...

      #include <QtGui>
      
      int main(int argc, char **argv){
          QApplication app(argc, argv);
      
          QFileDialog d3;
          d3.selectFile("/Users/Richard/Movies/oblivion.mpeg");
          d3.exec();
      
          return app.exec();
      }
      

        1. cocoadialog.zip
          3 kB
          Filipe Azevedo
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            menard Alexis Menard (closed Nokia identity) (Inactive)
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes