Show only one dialog when using QFileDialog on Mac.

The completer was trying to populate the combobox for completion even
if the dialog was hidden (the native one is shown).

Task-number:QTBUG-8624
Reviewed-by:richard