src/gui/dialogs/qfiledialog.cpp
@@ -723,9 +723,15 @@ void QFileDialog::setVisible(bool visible)
             // Set WA_DontShowOnScreen so that QDialog::setVisible(visible) below
             // updates the state correctly, but skips showing the non-native version:
             setAttribute(Qt::WA_DontShowOnScreen);
+            //So the completer don't try to complete and therefore to show a popup
+            d->completer->setModel(0);
         } else {
             d->nativeDialogInUse = false;
             setAttribute(Qt::WA_DontShowOnScreen, false);
+            if (d->proxyModel != 0)
+                d->completer->setModel(d->proxyModel);
+            else
+                d->completer->setModel(d->model);
         }
     }
 
